# ironlint

./: .gitignore  .hector.yml  .ironlint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml  deny.toml  llms.txt
.claude-plugin/: marketplace.json
crates/hector-cli/: Cargo.toml
crates/hector-cli/src/: cli.rs  main.rs
crates/hector-cli/src/commands/: baseline.rs  check.rs  doctor.rs  explain.rs  guide.rs  init.rs  migrate.rs  mod.rs  record_verdict.rs  schema.rs  session.rs  show_resolved_config.rs  trust.rs  validate.rs  watch.rs
crates/hector-cli/src/commands/init/: detect.rs  mod.rs  onboard.rs
crates/hector-cli/tests/: adapter_claude_code.rs  adapter_reasonix.rs  cli_baseline.rs  cli_baseline_refresh.rs  cli_check.rs  cli_check_content.rs  cli_check_content_script_prewrite.rs  cli_check_diff_cwd.rs  cli_check_diff_deletion.rs  cli_check_diff_slice.rs  cli_check_diff_timestamps.rs  cli_check_exit_3.rs  cli_check_external_paths.rs  cli_check_flags.rs  cli_check_single_load.rs  cli_deprecation.rs  cli_diff_read_error.rs  cli_e2e_check_quiet_stderr.rs  cli_e2e_doctor.rs  cli_e2e_emit_semantic_payload.rs  cli_e2e_explain.rs  cli_e2e_gates.rs  cli_e2e_guide.rs  cli_e2e_record_verdict.rs  cli_e2e_show_resolved_config.rs  cli_e2e_trust.rs  cli_event_validation.rs  cli_format_output.rs  cli_init.rs  cli_migrate.rs  cli_runner_telemetry_failure.rs  cli_schema.rs  cli_session.rs  cli_session_record.rs  cli_session_start.rs  cli_trust.rs  cli_typed_telemetry.rs  cli_v1_error.rs  cli_validate.rs  cli_version.rs  (+1 more)
crates/hector-cli/tests/common/: mod.rs
crates/hector-cli/tests/snapshots/: cli_e2e_doctor__doctor_json_output_snapshot_for_clean_v2_config.snap
crates/hector-core/: Cargo.toml
crates/hector-core/src/: baseline.rs  disable.rs  lib.rs  runner.rs  session_state.rs  telemetry.rs  trust.rs  verdict.rs  verdict_deferred.rs  watch.rs
crates/hector-core/src/adapter/: json_settings.rs  materialize.rs  mod.rs  ops.rs  registry.rs
crates/hector-core/src/config/: extends.rs  mod.rs  parser.rs  scope.rs  skip.rs  types.rs
crates/hector-core/src/diff/: mod.rs  parser.rs  synthesize.rs
crates/hector-core/src/engine/: ast.rs  capability.rs  context.rs  gate.rs  mod.rs  output.rs  script.rs  semantic.rs  session.rs
crates/hector-core/src/llm/: anthropic.rs  mod.rs  no_llm.rs  openai_compat.rs  prompt.rs
crates/hector-core/tests/: anthropic.rs  ast_engine.rs  baseline.rs  baseline_legacy.rs  baseline_v3.rs  builder.rs  capability.rs  capability_per_child.rs  check_session.rs  check_session_scope.rs  config_removed_engines.rs  context_expansion.rs  deferred_envelope_v3.rs  deferred_verdict_shape.rs  diff_analysis.rs  diff_parse.rs  diff_synthesize.rs  disable.rs  e2e_script_rules.rs  engine_trait.rs  extends.rs  extends_origin.rs  llm_api_key_env_present.rs  llm_config_evaluator_model.rs  llm_config_subagent_model_optional.rs  llm_factory.rs  llm_provider_subagent.rs  openai_compat.rs  parse_v1.rs  parse_v2.rs  prompt_injection.rs  resolve_paths.rs  runner.rs  runner_absolute_path.rs  runner_check_options.rs  runner_deferred_context_parity.rs  runner_deferred_mode.rs  runner_deferred_session.rs  runner_diff.rs  runner_disable.rs  (+22 more)
crates/hector-core/tests/fixtures/: baseline_v3.json
crates/hector-core/tests/snapshots/: deferred_verdict_shape__deferred_verdict_with_two_rules_serializes.snap  telemetry__snapshot_check_with_rules.snap  verdict_snapshot__verdict_block_serializes_to_canonical_json.snap  verdict_snapshot__verdict_block_with_deferred_rules_serializes.snap  verdict_snapshot__verdict_pass_with_no_violations.snap  verdict_snapshot__verdict_warn_from_violations.snap  verdict_snapshot__verdict_with_internal_engine_violation_serializes.snap
crates/ironlint-cli/: Cargo.toml
crates/ironlint-cli/src/: cli.rs  main.rs
crates/ironlint-cli/src/commands/: arch.rs  check.rs  config.rs  doctor.rs  error_report.rs  explain.rs  gate_bash.rs  mod.rs  show_resolved_config.rs  sweep.rs  trust.rs  update.rs  validate.rs  watch.rs
crates/ironlint-cli/src/commands/doctor/: adapters.rs  config.rs  mod.rs
crates/ironlint-cli/src/commands/init/: mod.rs  onboard.rs  render.rs  select.rs
crates/ironlint-cli/src/commands/watch/: mod.rs  render.rs  runtime.rs  state.rs
crates/ironlint-cli/tests/: cli_arch.rs  cli_check_sweep.rs  cli_config_walk_up.rs  cli_diff_read_error.rs  cli_diff_skips_unreadable_file.rs  cli_e2e_arch_check.rs  cli_e2e_doctor.rs  cli_e2e_explain.rs  cli_e2e_gate_bash.rs  cli_e2e_show_resolved_config.rs  cli_e2e_trust.rs  cli_e2e_trust_worktree.rs  cli_e2e_watch.rs  cli_error_voice.rs  cli_init.rs  cli_init_dry_run_isolation.rs  cli_init_onboarding.rs  cli_internal_error_detail.rs  cli_pass_no_match.rs  cli_timeout_floor_log.rs  cli_usage_errors_exit_1.rs  cli_validate.rs  cli_validate_json.rs  hook_contract_claude_code.rs  hook_contract_codex.rs  hook_contract_reasonix.rs
crates/ironlint-cli/tests/common/: mod.rs
crates/ironlint-core/: Cargo.toml
crates/ironlint-core/src/: lib.rs  runner.rs  telemetry.rs  trust.rs  verdict.rs  watch.rs
crates/ironlint-core/src/adapter/: json_settings.rs  materialize.rs  mod.rs  ops.rs  plan.rs  registry.rs
crates/ironlint-core/src/arch/: config.rs  engine.rs  evaluate.rs  extract.rs  graph.rs  lowering.rs  mod.rs  resolve.rs
crates/ironlint-core/src/config/: extends.rs  parser.rs  scope.rs  types.rs
crates/ironlint-core/src/diff/: parser.rs
crates/ironlint-core/src/engine/: gate.rs
crates/ironlint-core/src/runner/: engine.rs  mod.rs  path.rs  timeout.rs  tmpfile.rs  types.rs
crates/ironlint-core/src/snapshots/: ironlint_core__verdict__tests__verdict_json_wire_shape.snap
crates/ironlint-core/src/trust/: decision.rs  mod.rs  policy_hash.rs  store.rs  summary.rs  worktree.rs
crates/ironlint-core/tests/: arch_engine.rs  arch_evaluate.rs  arch_extends.rs  arch_graph_build.rs  arch_layers_env.rs  arch_lowering.rs  arch_overlay.rs  arch_write.rs  diff_parse.rs  extends.rs  extends_origin.rs  trust_extends.rs  trust_worktree.rs  verdict_internal_error.rs  verdict_schema_version.rs
(+185 files in other folders)
