[package]
name = "hector-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hector"
path = "src/main.rs"

[dependencies]
hector-core = { path = "../hector-core" }
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
globset.workspace = true
walkdir.workspace = true
chrono.workspace = true
ignore = "0.4"
rayon = "1"
fs4.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
wiremock.workspace = true
tokio.workspace = true
serde_json.workspace = true

[lints]
workspace = true
