[package]
name = "hector-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sha2.workspace = true
globset.workspace = true
ast-grep-core.workspace = true
ast-grep-language.workspace = true
reqwest.workspace = true
tokio.workspace = true
chrono.workspace = true
wait-timeout = "0.2"
fs4.workspace = true
regex.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nix.workspace = true
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true
serde_json.workspace = true
wiremock.workspace = true
tokio.workspace = true

[lints]
workspace = true
